Refactor registrationService to use ne ClubUser setup